[gd_scene load_steps=9 format=3 uid="uid://d9e8f7g6h5i4j3"]

[ext_resource type="Texture2D" uid="uid://6nx03k6si5k7" path="res://Assets/SpriteSVG/plain-circle.svg" id="1_esprit"]
[ext_resource type="PackedScene" uid="uid://b2mg3mjjofsdt" path="res://Composants/CMP_Movement.tscn" id="2_movement"]
[ext_resource type="PackedScene" uid="uid://bjddgxoyv846g" path="res://Composants/CMP_navigation.tscn" id="3_navigation"]
[ext_resource type="Texture2D" uid="uid://b1mvw0ooc4w68" path="res://Assets/SpriteSVG/plain-square.svg" id="4_indicator"]
[ext_resource type="PackedScene" uid="uid://dfhf540m5sc3n" path="res://Composants/Attacks/CMP_AttackParent.tscn" id="5_attack"]
[ext_resource type="PackedScene" uid="uid://c3int3imsbao6" path="res://Composants/CMP_Vie.tscn" id="6_life"]
[ext_resource type="PackedScene" uid="uid://pvpo8kprkut3" path="res://Composants/CMP_AgressionManager.tscn" id="7_aggression"]
[ext_resource type="Script" path="res://Assets/Script/SCR_EspritAnimal.gd" id="8_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_esprit"]
radius = 5.0

[node name="ENT_EspritAnimal" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("8_script")

[node name="CMP_movement" parent="." node_paths=PackedStringArray("navigationComponent") instance=ExtResource("2_movement")]
navigationComponent = NodePath("../CMP_Navigation")

[node name="CMP_Navigation" parent="." instance=ExtResource("3_navigation")]

[node name="SpriteCorps" type="Sprite2D" parent="."]
modulate = Color(1.0, 0.6, 0.2, 0.8)
scale = Vector2(0.04, 0.04)
texture = ExtResource("1_esprit")

[node name="SpriteIndicateur" type="Sprite2D" parent="SpriteCorps"]
modulate = Color(1.0, 0.4, 0.0, 0.9)
position = Vector2(100, 0)
rotation = 0.785398
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_indicator")

[node name="SpriteOmbre" type="Sprite2D" parent="."]
modulate = Color(0.4, 0.2, 0.1, 0.4)
scale = Vector2(0.035, 0.035)
texture = ExtResource("1_esprit")
z_index = -1

[node name="SpriteYeux" type="Sprite2D" parent="."]
modulate = Color(1.0, 0.0, 0.0, 1.0)
position = Vector2(2, -1)
scale = Vector2(0.008, 0.008)
texture = ExtResource("1_esprit")

[node name="SpriteYeux2" type="Sprite2D" parent="."]
modulate = Color(1.0, 0.0, 0.0, 1.0)
position = Vector2(-2, -1)
scale = Vector2(0.008, 0.008)
texture = ExtResource("1_esprit")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_esprit")

[node name="CMP_AttackParent" parent="." instance=ExtResource("5_attack")]
TrackedCollision = 3

[node name="CmpVie" parent="." instance=ExtResource("6_life")]
Max_life = 3

[node name="CmpAgressionManager" parent="." node_paths=PackedStringArray("movementControler") instance=ExtResource("7_aggression")]
collision_layer = 3
collision_mask = 3
movementControler = NodePath("../CMP_movement")
defensive_mode = false

[node name="PackDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PackDetectionShape" type="CollisionShape2D" parent="PackDetectionArea"]
shape = SubResource("CircleShape2D_esprit")
debug_color = Color(1, 0.6, 0, 0.42)

[node name="HowlTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true 